# Projet_Bee_Sound

./: .gitignore  Ajouter_bruit_arctifficielle.m  CMakeLists.txt  Code_matlab_final.m  Comparaison.m  README.md  comparaison_avec_include.m  myjudge.m  myzero.m
include/: my_header.h
src/: Projet_Bee_matlab_final.m  compare_spearman_poubelle.m  my_xcorr-sansfft.m
